--- a/playbook.yml
+++ b/playbook.yml
@@ -69,20 +69,21 @@
   remote_user: ubuntu
   become: yes
   vars:
+    ansible_python_interpreter: /usr/bin/python3
     container_name: nginx
     container_image: nginx
     container_image_tag: latest
   gather_facts: no
   pre_tasks:
     - name: 'install python'
-      raw: 'sudo apt-get -y update && sudo apt-get -y upgrade && sudo apt-get -y install python'
+      raw: 'sudo apt-get -y update && sudo apt-get -y upgrade && sudo apt-get -y install python3 python3-apt'
   tasks:
     - name: Install aptitude using apt
       apt: name=aptitude state=latest update_cache=yes force_apt_get=yes
 
     - name: Install required system packages
       apt: name={{ item }} state=latest update_cache=yes
-      loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python-pip', 'virtualenv', 'python3-setuptools', 'python-apt']
+      loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools' ]
 
     - name: Add Docker GPG apt Key
       apt_key:
